// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="echarts-for-react "
    size-sensor-id="1"
    style="height: 400px; width: 100%; webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
  >
    <div
      style="position: relative; width: 1280px; height: 800px; padding: 0px; margin: 0px; border-width: 0px;"
    >
      <canvas
        data-zr-dom-id="zr_0"
        height="800"
        style="position: absolute; left: 0px; top: 0px; width: 1280px; height: 800px; webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding: 0px; margin: 0px; border-width: 0px;"
        width="1280"
      />
    </div>
    <object
      class="size-sensor-object"
      data="about:blank"
      style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
      tabindex="-1"
      type="text/html"
    />
  </div>
</DocumentFragment>
`;

exports[`Graph should match snapshot when subtext is provided 1`] = `
<DocumentFragment>
  <div
    class="echarts-for-react "
    size-sensor-id="3"
    style="height: 400px; width: 100%; webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
  >
    <div
      style="position: relative; width: 1280px; height: 800px; padding: 0px; margin: 0px; border-width: 0px;"
    >
      <canvas
        data-zr-dom-id="zr_0"
        height="800"
        style="position: absolute; left: 0px; top: 0px; width: 1280px; height: 800px; webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding: 0px; margin: 0px; border-width: 0px;"
        width="1280"
      />
    </div>
    <object
      class="size-sensor-object"
      data="about:blank"
      style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
      tabindex="-1"
      type="text/html"
    />
  </div>
</DocumentFragment>
`;

exports[`Graph should match snapshot when there are no nodes or links 1`] = `
<DocumentFragment>
  <div
    class="echarts-for-react "
    size-sensor-id="2"
    style="height: 400px; width: 100%; webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
  >
    <div
      style="position: relative; width: 1280px; height: 800px; padding: 0px; margin: 0px; border-width: 0px;"
    >
      <canvas
        data-zr-dom-id="zr_0"
        height="800"
        style="position: absolute; left: 0px; top: 0px; width: 1280px; height: 800px; webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding: 0px; margin: 0px; border-width: 0px;"
        width="1280"
      />
    </div>
    <object
      class="size-sensor-object"
      data="about:blank"
      style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
      tabindex="-1"
      type="text/html"
    />
  </div>
</DocumentFragment>
`;
